@@ -38859,3 +38859,8 @@ Avoid crashing due to indiscriminate event handling (VZ). See:
   https://github.com/vadz/lmi/commit/6355bb270241826fa32e151eb197a4b1f5cd5c12.patch
   http://lists.nongnu.org/archive/html/lmi/2014-11/msg00062.html
 
+20160330T2344Z <gchicares@sbcglobal.net> [454]
+
+  skeleton.cpp
+Don't count all children just to see if there are more than one (VZ).
+
